--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,16 @@
         "lesstif/php-jira-rest-client": "^2.5",
         "guzzlehttp/guzzle": "^7.3",
         "symfony/dotenv": "^5.3",
-        "vlucas/phpdotenv": "^5.3"
+        "vlucas/phpdotenv": "^5.3",
+        "m4tthumphrey/php-gitlab-api": "^11.4",
+        "symfony/console": "^5.3"
+    },
+    "autoload": {
+        "psr-4": {
+            "ForecastAutomation\\": "ForecastAutomation"
+        },
+        "classmap": [
+          "ForecastAutomation"
+        ]
     }
 }
