--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
         "guzzlehttp/guzzle": "^7.3",
         "symfony/dotenv": "^5.3",
         "vlucas/phpdotenv": "^5.3",
-        "m4tthumphrey/php-gitlab-api": "^11.4",
-        "symfony/console": "^5.3"
+        "symfony/console": "^5.3",
+        "ext-rdkafka": "*"
     },
     "autoload": {
         "psr-4": {
