--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,16 @@
         "symfony/dotenv": "^5.3",
         "vlucas/phpdotenv": "^5.3",
         "symfony/console": "^5.3",
-        "ext-rdkafka": "*"
+        "phpunit/phpunit": "^9.5",
+        "phpstan/phpstan": "^0.12.98",
+        "friendsofphp/php-cs-fixer": "^3.1",
+        "squizlabs/php_codesniffer": "^3.6",
+        "infection/infection": "^0.25.0"
     },
     "autoload": {
         "psr-4": {
-            "ForecastAutomation\\": "ForecastAutomation"
+            "ForecastAutomation\\": "ForecastAutomation",
+            "ForecastAutomationTests\\": "tests"
         },
         "classmap": [
           "ForecastAutomation"
