adding code quality tooling

--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
         "classmap": [
           "ForecastAutomation"
         ]
+    },
+    "scripts": {
+        "test": "vendor/bin/phpunit"
     }
 }
