added autofixer workflow

--- a/.github/workflows/phpfixer.yml
+++ b/.github/workflows/phpfixer.yml
@@ -1,9 +1,10 @@
 name: Format (PHP)
 
 on:
+  push:
+    branches: [ master ]
   pull_request:
-    paths:
-      - '**.php'
+    branches: [ master ]
 
 jobs:
   php-cs-fixer:
