--- a/.github/workflows/phpfixer.yml
+++ b/.github/workflows/phpfixer.yml
@@ -14,8 +14,11 @@ jobs:
         with:
           ref: ${{ github.head_ref }}
 
+      - name: Install
+        run: composer install
+
       - name: Run php-cs-fixer
-        uses: docker://oskarstark/php-cs-fixer-ga
+        run: ./vendor/bin/php-cs-fixer fix src/
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
