--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,15 @@
         "guzzlehttp/guzzle": "^7.3",
         "symfony/dotenv": "^5.3",
         "vlucas/phpdotenv": "^5.3",
-        "symfony/console": "^5.3",
+        "symfony/console": "^5.3"
+    },
+    "require-dev": {
+        "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^9.5",
         "phpstan/phpstan": "^0.12.98",
         "friendsofphp/php-cs-fixer": "^3.1",
         "squizlabs/php_codesniffer": "^3.6",
         "infection/infection": "^0.25.0"
-    },
-    "require-dev": {
-        "roave/security-advisories": "dev-latest"
     },
     "autoload": {
         "psr-4": {
