--- a/.github/workflows/phpfixer.yml
+++ b/.github/workflows/phpfixer.yml
@@ -20,6 +20,9 @@ jobs:
       - name: Run php-cs-fixer
         run: ./vendor/bin/php-cs-fixer fix src/
 
+      - name: Run php-cs-fixer
+        run: ./vendor/bin/php-cs-fixer fix tests/
+
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Apply php-cs-fixer changes
+          commit_message: Autofix php-cs sniffs
