--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "phpstan/phpstan": "^0.12.98",
         "friendsofphp/php-cs-fixer": "^3.1",
         "squizlabs/php_codesniffer": "^3.6",
-        "infection/infection": "^0.25.0"
+        "infection/infection": "^0.25.0",
+        "slevomat/coding-standard": "^7.0",
+        "jangregor/phpstan-prophecy": "^0.8.1"
     },
     "autoload": {
         "psr-4": {
