--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "squizlabs/php_codesniffer": "^3.6",
         "infection/infection": "^0.25.0",
         "slevomat/coding-standard": "^7.0",
-        "jangregor/phpstan-prophecy": "^0.8.1"
+        "jangregor/phpstan-prophecy": "^0.8.1",
+        "phpstan/phpstan-phpunit": "^0.12.22"
     },
     "autoload": {
         "psr-4": {
