--- a/.github/workflows/phparkitect.yml
+++ b/.github/workflows/phparkitect.yml
@@ -7,7 +7,7 @@ on:
     branches: [ master ]
 
 jobs:
-  php-cs-fixer:
+  php-arkitect:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
