--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
         "guzzlehttp/guzzle": "^7.3",
         "symfony/dotenv": "^5.3",
         "vlucas/phpdotenv": "^5.3",
-        "symfony/console": "^5.3"
+        "symfony/console": "^5.3",
+        "shieldon/simple-cache": "^1.3"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
