--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "symfony/dotenv": "^5.3",
         "vlucas/phpdotenv": "^5.3",
         "symfony/console": "^5.3",
-        "shieldon/simple-cache": "^1.3"
+        "shieldon/simple-cache": "^1.3",
+        "justinrainbow/json-schema": "^5.2"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
@@ -44,6 +45,7 @@
         ]
     },
     "scripts": {
+        "console": "php bin/console",
         "test": "vendor/bin/phpunit"
     }
 }
