--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "vlucas/phpdotenv": "^5.3",
         "symfony/console": "^5.3",
         "shieldon/simple-cache": "^1.3",
-        "justinrainbow/json-schema": "^5.2"
+        "justinrainbow/json-schema": "^5.2",
+        "ext-rdkafka": "^5.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
