Closes: forecast.it.fill-15 add queueing system

--- a/.env.dist
+++ b/.env.dist
@@ -27,3 +27,5 @@ MATTERMOST_TEAM_ID=xxxxx
 LOGGLY_CUSTOMER_TOKEN=xxxxx
 
 PERIODICAL_ACTIVITY_CONFIG=[{"note":"Daily","duration":30,"project_id":"94336","frequency":"1,2,3,4,5,6,7"},{"note":"TeamMeeting","duration":30,"project_id":"94336","frequency":"1,2,3,4,5,6,7"}]
+
+KAFKA_BROKER_LIST=localhost:9092
