--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "symfony/console": "^5.3",
         "shieldon/simple-cache": "^1.3",
         "justinrainbow/json-schema": "^5.2",
-        "ext-rdkafka": "^5.0"
+        "ext-rdkafka": "^5.0",
+        "symfony/serializer": "^5.3",
+        "symfony/property-access": "^5.3"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
