--- a/.env.dist
+++ b/.env.dist
@@ -29,3 +29,9 @@ LOGGLY_CUSTOMER_TOKEN=xxxxx
 PERIODICAL_ACTIVITY_CONFIG=[{"note":"Daily","duration":30,"project_id":"94336","frequency":"1,2,3,4,5,6,7"},{"note":"TeamMeeting","duration":30,"project_id":"94336","frequency":"1,2,3,4,5,6,7"}]
 
 KAFKA_BROKER_LIST=localhost:9092
+
+AMQP_HOST=localhost
+AMQP_PORT=5672
+AMQP_VHOST=/
+AMQP_USER=guest
+AMQP_PASS=guest
