--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "justinrainbow/json-schema": "^5.2",
         "ext-rdkafka": "^5.0",
         "symfony/serializer": "^5.3",
-        "symfony/property-access": "^5.3"
+        "symfony/property-access": "^5.3",
+        "enqueue/amqp-ext": "^0.10.9"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
