Closes: forecast.it.fill-15 add queueing system

--- a/.env.dist
+++ b/.env.dist
@@ -2,10 +2,10 @@ APPLICATION_NAME=Forecast.fill
 APPLICATION_NAMESPACE=Forecast
 APPLICATION_ENV=development
 
-JIRA_QUERY='(project = POW) and updatedDate >= "%s" ORDER BY updated DESC'
+JIRA_QUERY='(project = XXX) and updatedDate >= "%s" ORDER BY updated DESC'
 JIRA_TOKEN=xxxx
 JIRA_HOST=https://nexus-netsoft.atlassian.net
-JIRA_USER=schoenfeld@nexus-netsoft.com
+JIRA_USER=xxxx
 JIRA_MAX_RESULTS=200
 
 FORECAST_API_KEY=xxxx
