--- a/.github/workflows/phpdeptrac.yml
+++ b/.github/workflows/phpdeptrac.yml
@@ -15,7 +15,7 @@ jobs:
           ref: ${{ github.head_ref }}
 
       - name: Install
-        run: composer install
+        run: composer install --ignore-platform-req=ext-amqp
 
       - name: Run vendor/bin/deptrac analyse
         run: vendor/bin/deptrac analyse
