--- a/.github/workflows/phpstan.yml
+++ b/.github/workflows/phpstan.yml
@@ -15,7 +15,7 @@ jobs:
           ref: ${{ github.head_ref }}
 
       - name: Install
-        run: composer install
+        run: composer install --ignore-platform-req=ext-amqp
 
       - name: Run phpstan analyze --configuration phpstan.neon
         run: vendor/bin/phpstan analyze --configuration phpstan.neon
