--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "license": "BSD-3-Clause",
     "config": {
         "platform": {
-            "php": "^8.0",
-            "ext-amqp": "^1.11.0beta"
+            "php": "8.0",
+            "ext-amqp": "1.11.0beta"
         }
     },
     "require": {
