--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,9 @@
+APP_ENV=dev
+APP_SECRET=3742c14dfc1760d44e4fa3e899f0aed4
+DATABASE_URL="mysql://guest:guest@db:3306/forecast.it.fill?serverVersion=mariadb-10.6.4"
+
 APPLICATION_NAME=Forecast.fill
 APPLICATION_NAMESPACE=Forecast
-APPLICATION_ENV=development
 
 JIRA_QUERY='(project = XXX) and updatedDate >= "%s" ORDER BY updated DESC'
 JIRA_TOKEN=xxxx
@@ -30,8 +33,11 @@ PERIODICAL_ACTIVITY_CONFIG=[{"note":"Daily","duration":30,"project_id":"94336","
 
 KAFKA_BROKER_LIST=localhost:9092
 
-AMQP_HOST=localhost
+AMQP_HOST=rabbitmq3
 AMQP_PORT=5672
 AMQP_VHOST=/
 AMQP_USER=guest
 AMQP_PASS=guest
+
+# xdebug cli
+PHP_IDE_CONFIG='serverName=forecast'
