--- a/composer.json
+++ b/composer.json
@@ -2,31 +2,75 @@
     "name": "patrickjaja/forecast.it.fill",
     "description": "Enjoy and stay focused on important things. Leave the time reporting system automized.",
     "license": "BSD-3-Clause",
+    "minimum-stability": "dev",
+    "prefer-stable": true,
     "config": {
+        "optimize-autoloader": true,
+        "preferred-install": {
+            "*": "dist"
+        },
+        "sort-packages": true,
         "platform": {
-            "php": "8.0",
-            "ext-amqp": "1.11.0beta"
+            "php": "8.0.10"
         }
     },
     "require": {
-        "lesstif/php-jira-rest-client": "^2.5",
+        "ext-amqp": "^1.11@beta",
+        "ext-ctype": "*",
+        "ext-iconv": "*",
+        "composer/package-versions-deprecated": "1.11.99.4",
+        "doctrine/annotations": "^1.0",
+        "doctrine/doctrine-bundle": "^2.4",
+        "doctrine/doctrine-migrations-bundle": "^3.1",
+        "doctrine/orm": "^2.10",
+        "enqueue/amqp-ext": "^0.10.9",
         "guzzlehttp/guzzle": "^7.3",
-        "symfony/dotenv": "^5.3",
-        "vlucas/phpdotenv": "^5.3",
-        "symfony/console": "^5.3",
-        "shieldon/simple-cache": "^1.3",
         "justinrainbow/json-schema": "^5.2",
-        "symfony/serializer": "^5.3",
-        "symfony/property-access": "^5.3",
-        "enqueue/amqp-ext": "^0.10.9"
+        "lesstif/php-jira-rest-client": "^2.5",
+        "phpdocumentor/reflection-docblock": "^5.2",
+        "sensio/framework-extra-bundle": "^6.1",
+        "shieldon/simple-cache": "^1.3",
+        "symfony/asset": "5.4.*",
+        "symfony/console": "5.4.*",
+        "symfony/dotenv": "5.4.*",
+        "symfony/expression-language": "5.4.*",
+        "symfony/flex": "^1.3.1",
+        "symfony/form": "5.4.*",
+        "symfony/framework-bundle": "5.4.*",
+        "symfony/http-client": "5.4.*",
+        "symfony/intl": "5.4.*",
+        "symfony/mailer": "5.4.*",
+        "symfony/mime": "5.4.*",
+        "symfony/monolog-bundle": "^3.1",
+        "symfony/notifier": "5.4.*",
+        "symfony/process": "5.4.*",
+        "symfony/property-access": "5.4.*",
+        "symfony/property-info": "5.4.*",
+        "symfony/proxy-manager-bridge": "5.4.*",
+        "symfony/runtime": "5.4.*",
+        "symfony/security-bundle": "5.4.*",
+        "symfony/serializer": "5.4.*",
+        "symfony/string": "5.4.*",
+        "symfony/translation": "5.4.*",
+        "symfony/twig-bundle": "5.4.*",
+        "symfony/validator": "5.4.*",
+        "symfony/web-link": "5.4.*",
+        "symfony/yaml": "5.4.*",
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
         "roave/security-advisories": "dev-latest",
         "phpunit/phpunit": "^9.5",
+        "symfony/browser-kit": "5.4.*",
+        "symfony/css-selector": "5.4.*",
+        "symfony/debug-bundle": "5.4.*",
+        "symfony/phpunit-bridge": "^5.3",
+        "symfony/stopwatch": "5.4.*",
+        "symfony/web-profiler-bundle": "5.4.*",
         "phpstan/phpstan": "^0.12.98",
         "friendsofphp/php-cs-fixer": "^3.1",
         "squizlabs/php_codesniffer": "^3.6",
-        "infection/infection": "^0.25.0",
         "slevomat/coding-standard": "^7.0",
         "jangregor/phpstan-prophecy": "^0.8.1",
         "phpstan/phpstan-phpunit": "^0.12.22",
@@ -36,24 +80,24 @@
     "autoload": {
         "psr-4": {
             "ForecastAutomation\\": "src/ForecastAutomation"
-        },
-        "classmap": [
-            "src/ForecastAutomation"
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
-            "ForecastAutomation\\": "src/ForecastAutomation",
             "ForecastAutomationTests\\": "tests/ForecastAutomationTests",
             "Architecture\\": "tests/Architecture"
-        },
-        "classmap": [
-            "src/ForecastAutomation",
-            "tests/ForecastAutomationTests",
-            "tests/Architecture"
-        ]
+        }
     },
     "scripts": {
+        "auto-scripts": {
+            "cache:clear": "symfony-cmd"
+        },
+        "post-install-cmd": [
+            "@auto-scripts"
+        ],
+        "post-update-cmd": [
+            "@auto-scripts"
+        ],
         "import": "docker-compose -f .docker/docker-compose.yml up -d && sleep 10 && php bin/console forecast:import:activity && php bin/console forecast:import:periodical:activity && php bin/console queue:client:consumer forecast.send.activity.queue",
         "console": "php bin/console",
         "test": "vendor/bin/phpunit"
